# shorts

./: .gitignore  README.md  notes.md  pyproject.toml
agent/: __init__.py  cartesia_tts.py  cli.py  config.py  debug_overlay.py  openrouter_client.py  qa.py  renderer.py  scene_builder.py  stages.py  timeline_compiler.py  timeline_schema.py
assets/backgrounds/: plus-pattern.css
assets/components/: callout-cell.html  chat-bubble.html  comparison-boxes.html  countdown-timer.html  email-preview.html  mcq-card.html  notification-toast.html  pill-tag.html  progress-bar.html  quote-card.html  stat-badge.html  step-checklist.html
assets/excel/: cell-highlight.html  comps-table.html  dcf-table.html  income-statement.html  lbo-table.html  sensitivity-table.html  waterfall-chart.html
assets/finance/: bank-logos-row.html  deal-tombstone.html  org-chart.html  salary-bar.html
assets/icons/: arrow-pointers.html  emoji-set.html  pulse-dot.html  status-icons.html
assets/text/: big-title.html  bullet-list.html  (+2 more)
audio_scripts/: audio_script1.md  ib_interview_million_dollars.md
debug/: timing_test.html
docs/: ANIMATION_LIBRARY.md  COMPONENT_LIBRARY.md  PRODUCTION_GUIDE.md  scene-animation-guide.md
scenes/: ib_model_critique.html  scene1.html
scripts/: script1.md  video_script1.md
shorts_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: assets_backgrounds.html  assets_components.html  assets_excel.html  assets_finance.html  assets_icons.html  assets_logos.html  assets_text.html  base.html  scene_playground.html  script-template.md
(+13 files in other folders)
