[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shorts-agent"
version = "0.1.0"
description = "TTS + Render utilities for HTML-based YouTube Shorts (Cartesia + Playwright + ffmpeg)."
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "beautifulsoup4>=4.12.3",
  "playwright>=1.47.0",
]

[project.scripts]
shorts = "agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
exclude = ["assets*", "scenes*", "templates*", "audio_scripts*", "docs*", "scripts*", "tests*", "renders*", "runs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m \"not live and not render and not e2e\""
markers = [
  "live: hits Cartesia API (costs money)",
  "render: requires Playwright browsers + ffmpeg/ffprobe",
]

